
This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9.


Version 2.11.2
--------------
* Fix crash when manipulating cpukinds after topology
  duplication, thanks to Hadrien Grasland for the report.
* Add missing CPU info attrs on aarch64 on Linux.


Version 2.11.1
--------------
* Fix bash completions, thanks Tavis Rudd.


Version 2.11.0
--------------
* API
  + Add HWLOC_MEMBIND_WEIGHTED_INTERLEAVE memory binding policy on
    Linux 6.9+. Thanks to Honggyu Kim for the patch.
    - weighted_interleave_membind is added to membind support bits.
    - The "weighted" policy is added to the hwloc-bind tool.
  + Add hwloc_obj_set_subtype(). Thanks to Hadrien Grasland for the report.
* GPU support
  + Don't hide the GPU NUMA node on NVIDIA Grace Hopper.
  + Get Intel GPU OpenCL device locality.
  + Add bandwidths between subdevices in the LevelZero XeLinkBandwidth
    matrix.
  + Fix PCI Gen4+ link speed of NVIDIA GPU obtained from NVML,
    thanks to Akram Sbaih for the report.
* Windows support
  + Fix Windows support when UNICODE is enabled, several hwloc features
    were missing, thanks to Martin for the report.
  + Fix the enabling of CUDA in Windows CMake build,
    Thanks to Moritz Kreutzer for the patch.
  + Fix CUDA/OpenCL test source path in Windows CMake.
* Tools
  + Option --best-memattr may now return multiple nodes. Additional
    configuration flags may be given to tweak its behavior.
  + hwloc-info has a new --get-attr option to get a single attribute.
  + hwloc-info now supports "levels", "support" and "topology"
    special keywords for backward compatibility for hwloc 3.0.
  + The --taskset command-line option is superseded by the new
    --cpuset-output-format which also allows to export as list.
  + hwloc-calc may now import bitmasks described as a list of bits
    with the new "--cpuset-input-format list".
* Misc