@@ -1,6 +1,7 @@
 .\" -*- nroff -*-
 .\" Copyright © 2010-2024 Inria.  All rights reserved.
 .\" Copyright © 2009-2020 Cisco Systems, Inc.  All rights reserved.
+.\" Copyright © 2024 CNRS
 .\" See COPYING in top-level directory.
 .TH HWLOC-CALC "1" "%HWLOC_DATE%" "%PACKAGE_VERSION%" "%PACKAGE_NAME%"
 .SH NAME
@@ -282,13 +283,15 @@ while a comma is used to separate indexes
 \fB\-\-single\fR
 Singlify the output to a single CPU.
 .TP
-\fB\-\-cpuset\-output\-format\fR <hwloc|list|taskset> \fB\-\-cof\fR <hwloc|list|taskset>
+\fB\-\-cpuset\-output\-format\fR <hwloc|list|taskset|systemd-dbus-api> \fB\-\-cof\fR <hwloc|list|taskset|systemd-dbus-api>
 Change the format of displayed CPU set strings.
 By default, the hwloc-specific format is used.
 If \fIlist\fR is given, the output is a comma-separated of numbers or ranges,
 e.g. 2,4-5,8 .
 If \fItaskset\fR is given, the output is compatible with the taskset program
 (replaces the former \fB--taskset\fR option).
+If \fIsystemd-dbus-api\fR is given, the output is compatible with systemd's D-Bus API,
+e.g. "AllowedCPUs ay 0x0002 0x78 0x04" for the CPU set list "3-6,10".
 
 This option has no impact on the format of input CPU set strings,
 see \fB\-\-cpuset\-input\-format\fR.
@@ -533,6 +536,36 @@ OS devices may also be filtered by subtype. In this example, there are
     5,6,7,8
     $ utils/hwloc/hwloc-calc -I coproc node:1
     7,8
+
+.
+.
+.\" **************************
+.\"    Example of use of the systemd-dbus-api cpuset output format
+.\" **************************
+.SH Example of use of the systemd-dbus-api cpuset output format
+.PP
+hwloc-calc allows one to generate the very cryptic AllowedCPUs string, which the D-Bus API of systemd expects, from other supported CPU set representations. This is especially useful when the systemd-run command, which understands CPU set provided as list, cannot be used.
+.
+.PP
+First, create a systemd slice:
+
+.EX
+    $ busctl call org.freedesktop.systemd1 /org/freedesktop/systemd1 org.freedesktop.systemd1.Manager StartUnit ss my_slice.slice fail
+.EE
+
+Then, configure the CPU set of the slice, using hwloc-calc to translate the syntax:
+
+.EX
+    $ busctl call org.freedesktop.systemd1 /org/freedesktop/systemd1 org.freedesktop.systemd1.Manager SetUnitProperties 'sba(sv)' my_slice.slice 1 1 $(hwloc-calc pu:0 pu:31 pu:32 pu:63 pu:64 pu:77 --cpuset-output-format systemd-dbus-api)
+.EE
+
+Finally, add the current process to the slice:
+
+.EX
+    $ busctl call org.freedesktop.systemd1 /org/freedesktop/systemd1 org.freedesktop.systemd1.Manager StartTransientUnit 'ssa(sv)a(sa(sv))' my_scope.scope fail 3 Delegate b 1 PIDs au 1 $$ Slice s my_slice.slice 0
+.EE
+
+More info in the org.freedesktop.systemd1(5) manual page.
 
 .
 .\" **************************
