@@ -239,6 +239,12 @@ NUMANode:1
 0-2,5-6,8,10,14,16-17,21,24
 8-
 
+# Converting to systemd-dbus-api
+AllowedCPUs ay 0x0001 0x01
+AllowedCPUs ay 0x0004 0x01 0x00 0x00 0x80
+AllowedCPUs ay 0x0008 0x01 0x00 0x00 0x80 0x00 0x00 0x00 0x80
+AllowedCPUs ay 0x0009 0x0f 0xf0 0x00 0x00 0xf0 0x00 0x00 0x00 0x0f
+
 # Reading from stdin
 Waiting for locations to process on stdin...
 0x00000001
